data/Java/09-use-undeclared-variable/2/[M]Error.txt
*http://www.runoob.com/java/java-object-classes.html
Test.java:10: error: cannot find symbol
        bread = new String();
        ^